--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ group = 'com.cleancoders.features.java'
 version = '0.0.1-SNAPSHOT'
 
 java {
-	sourceCompatibility = '20'
+	sourceCompatibility = "21"
 }
 
 repositories {
@@ -25,3 +25,4 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 }
+targetCompatibility = JavaVersion.VERSION_21
